@@ -1,34 +1,33 @@
 package racingcar.domain;
 
-import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class Winners {
-    private List<Car> winners;
-    private int MaxPosition;
+    private final int maxPosition;
+    private final List<Car> winnerCars;
 
-    public Winners(List<Car> cars) {
-        this.MaxPosition = getMaxPosition(cars);
-        this.winners = getWinners(cars);
+    public Winners(Cars cars) {
+        this.maxPosition = getMaxPosition(cars);
+        this.winnerCars = getWinnerCars(cars);
     }
 
-    public int getMaxPosition(List<Car> cars) {
-        return cars.stream().mapToInt(Car::getPosition).max().orElse(Integer.MIN_VALUE);
+    private int getMaxPosition(Cars cars) {
+        return cars.getCars().stream()
+                .mapToInt(Car::getPosition)
+                .max()
+                .orElse(Integer.MIN_VALUE);
     }
 
-    public List<Car> getWinners(List<Car> cars) {
-        List<Car> winners = new ArrayList<>();
-        cars.forEach(car -> {
-            if (car.getPosition() == this.MaxPosition) {
-                winners.add(car);
-            }
-        });
-        return winners;
+    private List<Car> getWinnerCars(Cars cars) {
+        return cars.getCars().stream()
+                .filter(car -> car.getPosition() == this.maxPosition)
+                .toList();
     }
 
-    public List<String> getWinnersName() {
-        return winners.stream().map(Car::getName).collect(Collectors.toList());
+    public List<String> getWinnerCarsName() {
+        return winnerCars.stream()
+                .map(Car::getName)
+                .toList();
     }
 
 }
